--- a/event-tyosi.html
+++ b/event-tyosi.html
@@ -87,7 +87,7 @@
                         </div>
                         
                         <div class="gacha-banner">
-                            <img src="/picture/owner-life-banner.jpeg?height=300&width=800" alt="稼げ！調子くんのオーナーライフ">
+                            <img src="/picture/JPEG画像.jpeg?height=300&width=800" alt="稼げ！調子くんのオーナーライフ">
                             <div class="gacha-info-overlay">
                                 <h3>稼げ！調子くんのオーナーライフ</h3>
                                 <p>球団会社のオーナーになって資金を稼ごう！</p>
