--- a/index.html
+++ b/index.html
@@ -129,16 +129,16 @@
                         <div class="news-grid">
                             <article class="news-card featured">
                                 <div class="news-image">
-                                    <img src="/picture/Screenshot 2025-07-24 21:24:08.png?height=200&width=400" alt="最新イベント情報">
+                                    <img src="/picture/JPEG画像.jpeg?height=200&width=400" alt="最新イベント情報">
                                     <span class="news-badge">重要</span>
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">【速報】セレクション開催決定！！！</h3>
-                                    <p class="news-excerpt">無料配布はなさそうだが、ラインナップは激アツ🔥</p>
-                                    <a href="players.html" class="section-link">記事を見る</a>
+                                    <h3 class="news-title">【速報】調子くんのオーナーライフが開催</h3>
+                                    <p class="news-excerpt">早く終わるコツは、スポンサー…？</p>
+                                    <a href="events.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年7月24日</span>
-                                        <span class="news-category">選手評価</span>
+                                        <span class="news-date">2025年9月12日</span>
+                                        <span class="news-category">イベント</span>
                                     </div>
                                 </div>
                             </article>
