--- a/events.html
+++ b/events.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="プロスピAのイベント攻略情報を詳しく解説。効率的な進め方や報酬の獲得方法、最新イベント情報まで完全網羅。">
-    <meta name="keywords" content="プロスピ,イベント,攻略,累計,コロシアム,プロスピコロシアム,効率">
+    <meta name="keywords" content="プロスピ,イベント,攻略,累計,調子くんのオーナーライフ,プロスピコロシアム,効率">
     <meta name="referrer" content="no-referrer-when-downgrade" />
     <!-- Temporary redirect to event-hero.html -->
-    <meta http-equiv="refresh" content="0;url=event-homerun.html">
+    <meta http-equiv="refresh" content="0;url=event-tyosi.html">
     <title>イベント攻略 - プロスピA攻略サイト</title>
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
